css/main.css
body {
	font-family: 'Open Sans', sans-serif;
}

.navbar-brand
{
  	font-size: 200%;
 	font-family: 'Play', sans-serif;
}

#lastname {
	color:#90ee90;
}

.navbar-brand:hover #lastname {
	color: #ecf0f1;
}

.navbar .navbar-brand {
  color: #ecf0f1;
}

.navbar {
	background-image: none;
	background-color: #222222;
	padding-top: 0.5%;
	padding-bottom: 0.5%;
	font-size: larger;
	font-family: 'Play', sans-serif;
}

.navbar li a {
  color: #ecf0f1;
  border-radius: .25rem;
  margin: 0 0.25em;
}

.navbar li a:hover {
	background-color: #444444;
}

.navbar .navbar-nav .nav-link:focus {
  background-color: #444444;
}

ul.dropdown-menu li {
    text-align: left;
}

ul.dropdown-menu li a.dropdown-item {
	color: black;
}

.content {
	padding-top: 1%;
	padding-bottom: 1%;
}

.footer {
	margin-top: 5%;
	font-size: 80%;
	padding-left: 1%;
}

.footer-buttons {
	float: right;
	padding-right: 1%;
}

.footer-buttons li {
	display: inline-block;
}

.footer-icon {
	height: 2.5em;
	width: 2.5em;
	margin-left: 0.5em;
}

h1 {
	text-transform: uppercase;
	color: gray;
	padding-bottom: 0.5%;
}

h1:not(#about_header) {
	padding-left: 2%;
}

h2 {
	color: gray;
	padding-left: 2%;
	padding-bottom: 1%;
}

.carousel {
	margin: auto;
}

#homeCarousel > .carousel-inner > .item {
  	height: 80vh;
}

#superflickCarousel > .carousel-inner > .item,
#travelyzeCarousel > .carousel-inner > .item {
  	height: 40vh;
}


.carousel-inner {
	background: linear-gradient(#222222, #3b3b3b, #222222);
}

.carousel-inner > .item > img,
.carousel-inner > .item > a > img
 {
  	position: absolute;
   	left: 50%;
   	top: 50%;
    -webkit-transform: translateY(-50%) translateX(-50%);
    width: 100%;
    min-width: 100;
	height: auto;
}

.carousel-inner > .item:nth-child(2) > .carousel-caption {
	color: black;
}

.content_centered {
	float: none;
    display: inline-block;
    vertical-align: middle;
}

.portfolio_item {
	padding-bottom: 3%; 
}

.portfolio_item p:nth-child(2) {
	font-style: italic;
}

.portfolio_item li {
	padding-bottom: 2%;
}

.overlay {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: .5s ease;
  background-color: #c3c3c3;
}

.img-display {
	margin-left: 2%;
}

.img-display:hover .overlay {
  opacity: 0.5;
}

.img_text {
  color: black;
  font-size: 100%;
  position: absolute;
  padding-left: 5%;
  padding-top: 3%;
}

#resume_div {
	margin: auto;
	width: 100%;
	height: 100%;
	padding-top: 10%;
}

#about_image {
	padding-top: 5%;
	padding-left: 2%;
	padding-right: 2%;
}

#about_contact {
	padding-top: 10%;
	padding-left: 2%;
	padding-right: 2%;
	text-align: right;
}

#about_contact p {
	font-size: larger;
	line-height: 90%;
}

#about_writeup {
	padding-left: 5%;
}

#about_writeup p {
	font-size: larger;
	line-height: 180%;
}

